--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,5 +1,5 @@
 .home-wrapper {
-  font-family: "Helvetica, sans-serif";
+  font-family: "Inter, sans-serif";
   background-color: #f8f9fa;
   box-sizing: border-box;
   margin-top: 75px;
@@ -112,7 +112,7 @@
 }
 
 .home-wrapper .MuiTypography-h5 {
-  font-family: "Helvetica, sans-serif";
+  font-family: "Inter, sans-serif";
   color: #000000;
   text-transform: uppercase;
   font-weight: bold;
@@ -122,7 +122,7 @@
 
 .home-wrapper .MuiTypography-body1,
 .home-wrapper .MuiTypography-body2 {
-  font-family: "Helvetica, sans-serif";
+  font-family: "Inter, sans-serif";
   color: #333;
   line-height: 1.6;
   font-size: 0.9rem;
