--- a/frontend/src/styles/Form.css
+++ b/frontend/src/styles/Form.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   min-height: 85vh;
-  background-color: #ffffff;
+  background-color: #333333;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   padding: 2rem;
 }
