--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   min-height: 90vh;
-  background-color: #f3f3f3;
+  background-color: #333333;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   padding: 2rem;
 }
