--- a/frontend/src/styles/About.css
+++ b/frontend/src/styles/About.css
@@ -10,7 +10,7 @@
   max-width: 320px;
   border: none;
   border-radius: 8px;
-  background-color: #ffffff;
+  background-color: #333333;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   margin: 0 auto;
@@ -59,7 +59,7 @@
 
 .about-page .MuiTypography-h5 {
   font-family: "Inter, sans-serif";
-  color: #000000;
+  color: #fff;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 1.25rem;
@@ -69,13 +69,13 @@
 .about-page .MuiTypography-body1,
 .about-page .MuiTypography-body2 {
   font-family: "Inter, sans-serif";
-  color: #333;
+  color: #fff;
   line-height: 1.6;
   font-size: 0.9rem;
 }
 
 .about-page .contact-item {
-  background-color: #ffffff;
+  background-color: #333333;
   border-radius: 12px;
   padding: 16px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -93,7 +93,7 @@
 
 .about-page .contact-item a {
   text-decoration: none;
-  color: #333;
+  color: #fff;
   font-family: "Inter, sans-serif";
 }
 
